--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoEmVídeo</a>.</p>
+        <p>Site criado por <a href="https://github.com/MarcosDevPro" target="_blank">Marcos Paulo</a> para <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoEmVídeo</a>.</p>
     </footer>
 </body>
 </html>
